# DataLib

./: .env  README.md  docker-compose.yml  get_api_keys.py  main.py  orchestrator.py  parquet_view.py  pyproject.toml
ELT/: __init__.py  base.py  download_cli.py  extract_alpha_vantage.py  extract_ecb.py  extract_eurostat.py  extract_fred.py  extract_polygon.py  extract_yfinance.py  save_alpha_vantage.py  save_ecb.py  save_eurostat.py  save_fred.py  save_polygon.py  save_yfinance.py
config/: __init__.py
data/ecb/: interest_rates.parquet
data/eurostat/: euro_area_yield_curve.parquet
data/eurostat/gov_bond_yields/: DE.parquet
data/fred/: gsw_forward_rates.parquet  treasury_constant_maturity.parquet
data/parquet/: gsw_term_premiums.parquet  gsw_zero_coupon.parquet
data/parquet/balance_sheet/: AMD.parquet
data/parquet/cash_flow/: AMD.parquet
data/parquet/daily_bars/: AMD.parquet  AMD.parquet.meta.json  GOOGL.parquet  GOOGL.parquet.meta.json  META.parquet  META.parquet.meta.json  NVDA.parquet  NVDA.parquet.meta.json
data/parquet/earnings/: AMD.parquet  NVDA.parquet  NVDA.parquet.meta.json
data/parquet/ecb/: hicp.parquet  hicp.parquet.meta.json  interest_rates.parquet  interest_rates.parquet.meta.json  monetary_aggregates.parquet  monetary_aggregates.parquet.meta.json
data/parquet/eurostat/: euro_area_yield_curve.parquet  euro_area_yield_curve.parquet.meta.json  hicp.parquet  hicp.parquet.meta.json
data/parquet/income_statement/: AMD.parquet
docker/db/: Dockerfile
docker/loader/: Dockerfile  load_parquet.py
docker/pgadmin/: servers.json
logs/: app.log.jsonl
tests/: conftest.py  test_base.py  test_extractors.py  test_orchestrator.py  test_savers.py
utils/: http.py  results.py  state.py  validators.py
(+38 files in other folders)
