[project]
name = "datadownloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "massive>=2.6.0",
    "pendulum>=3.2.0",
    "polars>=1.40.1",
    "requests>=2.33.1",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.15.12",
]
