[project]
name = "datadownloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ecbdata>=0.1.1",
    "eurostat>=1.1.1",
    "massive>=2.6.0",
    "pandas>=3.0.2",
    "pandera[polars]>=0.31.0",
    "pendulum>=3.2.0",
    "polars>=1.40.1",
    "pydantic-settings>=2.0",
    "pyarrow>=24.0.0",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
parquet-view = "parquet_view:app"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "responses>=0.26",
    "ruff>=0.15.12",
]


